# ghilston-python-cookiecutter

./: .flake8  .gitignore  .pylintrc  .readthedocs.yml  Makefile  README.md  TODO.md  cookiecutter.json  foo.py  pyproject.toml  tasks.py
.circleci/: config.yml
app/: app.py
docker/: Dockerfile  docker-entrypoint.sh
docs/: conf.py  ghilston_python_cookiecutter.rst  index.rst
env/: .gitignore
ghilston_python_cookiecutter/bar/: bar.py
ghilston_python_cookiecutter/utils/: setup_logging.py
logs/: .gitignore
test/: test_app.py
tests/: test_app.py  test_bar.py
{{ cookiecutter.repo_name }}/: .gitignore  .isort.cfg  LICENSE.txt  README.md  example_project_script.py  foo.py  logging.json  pyproject.toml  tasks.py
{{ cookiecutter.repo_name }}/.circleci/: config.yml
{{ cookiecutter.repo_name }}/docker/: Dockerfile  DockerfileDev  docker-compose-entrypoint.sh  docker-compose.yml  docker-entrypoint-development.sh  docker-entrypoint.sh  install-invoke.sh  install-python-packages-for-docker-compose-dev.sh
{{ cookiecutter.repo_name }}/docs/: example_project_script.rst  ghilston_python_cookiecutter.bar.rst  ghilston_python_cookiecutter.utils.rst  index.rst  modules.rst  tests.rst
{{ cookiecutter.repo_name }}/sample/: example_module_importing_another_module.py  example_module_to_import.py  example_module_with_logging.py  example_utils_module.py
{{ cookiecutter.repo_name }}/tests/: context.py  test_bar.py  test_example_package.py  test_example_package_with_logging.py  test_foo.py  tests_example_project_script.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/bar/: bar.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/example_package/: README.md  setup.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/example_package/example_package/: example_module.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/example_package_with_logging/: README.md  setup.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/example_package_with_logging/example_package_with_logging/: example_module_with_logging.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/example_package_with_logging/tests/: test_example_package_with_logging.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/example_utils_package/: README.md  setup.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/example_utils_package/example_utils_package/: example_utils_package.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/utils/: setup_logging.py
{{cookiecutter.directory_name}}/: app.py
