[tool.poetry]
name = "ghilston-python-cookiecutter"
version = "0.1.0"
description = "Cookie cutter for Python"
authors = ["GregHilston <Gregory.Hilston@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
pytest = "^6.2.4"
pylint = "^2.8.2"
mypy = "^0.812"
bandit = "^1.7.0"
safety = "^1.10.3"
dodgy = "^0.2.1"
isort = "^5.8.0"
coverage = "^5.5"
Sphinx = "^4.0.1"
invoke = "^1.5.0"
pytest-cov = "^2.12.0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
